Aggiunta funzionalità calcolo pulsazione

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-
+\input{preambolo.sty}
 
 \title{Relazione oscillazioni accopiata}
 \author{Aiello Giosuè, Fenili Domenico, Sermi Francesco}
@@ -16,5 +16,6 @@ qualcosa che si scrive subito dopo
 
 \section{Descrizione delle misure}
 
+Prima di procedere con le misure abbiamo misurato l'altezza della sbarra del sistema
 
 \end{document}
