update sulle oscilalzioni con smorzatore

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,8 @@ qualcosa che si scrive subito dopo
 
 \section{Descrizione delle misure}
 
-Prima di procedere con le misure abbiamo misurato l'altezza della sbarra del sistema
+Per effettuare questa esperienza era necessario misurare il periodo di oscillazione delle oscillazioni accoppiate
+in varie situazioni. \\
+Prima di procedere però con le misurazioni di questi, abbiamo misurato le grandezze 
 
 \end{document}
