--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,15 @@ qualcosa che si scrive subito dopo
 
 Per effettuare questa esperienza era necessario misurare il periodo di oscillazione delle oscillazioni accoppiate
 in varie situazioni. \\
-Prima di procedere però con le misurazioni di questi, abbiamo misurato le grandezze 
-
+Prima di procedere però con le misurazioni di questi, abbiamo misurato la lunghezza dell'asta che oscillava e la sua larghezza, che risulta essere pari a
+\begin{equation*}
+	L =
+\end{equation*}
+e abbiamo misurato il raggio e lo spessore del disco a cui l'asta era attaccata, pari a
+\begin{equation}
+	R = 
+\end{equation}
+\textbf{Osservazioni}: sebbene l'asta presentasse dei \emph{buchi}, abbiamo considerato come trascurabile lo spostamento del centro di massa dovuto a questi. Inoltre l'asta e il disco si sono considerati omogenei, quindi la loro densità era costante in ogni punto del materiale. \\
+Dopo aver effettuato questo, abbiamo iniziato a misurare l'oscillazione del singolo pendolo prima senza lo smorzatore e poi senza lo smorzatore: ai fini di queste misure, abbiamo usufruito di un programma di acquisizione che girava sul PC che avevamo a disposizione in laboratorio che andava a stimare la posizione del pendolo in $u.a$ (unità arbitrarie) in base alla variazione di corrente dovuta al passaggio del pendolo nell'acqua lì presente. \\
+Dopo aver effettuato queste misure, siamo passati ad analizzare il moto del pendolo se accoppiato ad un altro oscillatore armonico tramite oscillazioni secondo i modi normali: per fare ciò abbiamo utilizzato una molla con cui abbiamo collegato i due pendoli e, successivamente, abbiamo 
 \end{document}
